tests/unit/default/syntax-error/080-add-pk.e.t
---- IN ----
+PK
---- OUT ----
---- ERR ----
syntax: expected <table-columns-ref> after `+PK` instead of EOL at position 3 - at line 1
---- EXIT ----
1
